--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
   </head>
 
   <body>
+    <script>
+      alert("{{auth}}");
+    </script>
     <div class="login">
      <h1>Tutor Scheduling</h1>
     <div class="login-page">
@@ -35,7 +38,6 @@
     </div>
     </div>
     <!-- Bootstrap core JavaScript -->
-
     <script src="{{url_for('static', filename='vendor/jquery/jquery.min.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
