--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Post - Start Bootstrap Template</title>
+    <title>Login | Tutor Scheduling</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
@@ -19,9 +19,6 @@
   </head>
 
   <body>
-    <script>
-      alert("{{auth}}");
-    </script>
     <div class="login">
      <h1>Tutor Scheduling</h1>
     <div class="login-page">
