--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,9 +10,37 @@ html {
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+.float-left {
+    float: left;
+    width: 50%;
+}
+
+.float-right {
+    float: right;
+   width: 50%;
+
+}
+
+#username {
+    float: right;
+    color: #fff;
+    font-size: 1.5em;
+    padding: 10px 10px 0px 0px;
+}
+
+.log-out-button {
+    position: absolute;
+    right: 100px;
+    top: 10px;
+    padding: 10px;
+    background:#fff;
+}
+
 /****** LOGIN ********/
 
-.login {
+.login,
+.courses,
+.comments {
     margin: auto;
 }
 
@@ -21,7 +49,9 @@ html {
   margin: auto;
 }
 
-.login h1 {
+.login h1,
+ .courses h1,
+ .comments h1 {
     color: #efab00;
     font-size:60px;
     font-weight: 300;
@@ -117,7 +147,7 @@ html {
   color: #EF3B3A;
 }
 body {
-  background: #002664;
+  background: #3186c0;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -134,11 +164,17 @@ body {
 #course-day0,
 #course-day1,
 #course-day2,
-#course-day3{
+#course-day3,
+#course-time0,
+#course-time1,
+#course-time2,
+#course-time3 {
   color: #fff;
     font-size: 30px;
     font-weight: 300;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
+
+
