--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <a href="/courses"class="back-button">Back</a>
+    <a href="/schedule"class="back-button">Back</a>
     <a href="/profile" onclick="myProfile()"><div id="username-comments"></div></a>
       <a href="/"class="log-out-button">Log Out</a>
     <div class="profile">
@@ -30,23 +30,29 @@
           <div class="profile-pic">
             <p><img src="../static/css/img/flash.png"/></p>
           </div>
+
           <div class="profile-data">
-              <div id="name"><h2>Name: </h2><h2 class="name-text"></h2></div>
-              <div id="id"><h2>KSU ID: </h2><h2 class="id-text"></h2></div>
-              <div id="email"><h2>Email: </h2><h2 class="email-text"></h2></div>
-              <div id="phone"><h2>Phone: </h2><h2 class="phone-text"></h2></div>
-              <div id="scheduled"><h2>Scheduled For: </h2><h2 class="scheduled-text"></h2></div>
+              <div id="name"><h2 class="title">Name: </h2><h2 id="name-text"></h2></div>
+              <div id="id"><h2 class="title">KSU ID: </h2><h2 id="id-text"></h2></div>
+              <div id="email"><h2 class="title">Email: </h2><h2 id="email-text"></h2></div>
+              <div id="phone"><h2 class="title">Phone: </h2><h2 id="phone-text"></h2></div>
+              <div id="scheduled"><h2 class="title">Scheduled For: </h2><h2 id="scheduled-text"></h2></div>
           </div>
+
       </div>
 
     </div>
     <script>
-        var id = "{{ id | safe }}"
-        var email = "{{ email | safe }}"
-        var phone = "{{ phone | safe }}"
-        var scheduled = "{{ scheduled | safe }}"
-        alert(id);
+        id = "{{ id | safe }}"
+        email = "{{ email | safe }}"
+        phone = "{{ phone | safe }}"
+        scheduled = "{{ scheduled | safe }}"
+
+
     </script>
+
+    <script src="{{url_for('static', filename='profile.js')}}"></script>
+
     <script src="{{url_for('static', filename='comments.js')}}"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="{{url_for('static', filename='vendor/jquery/jquery.min.js')}}"></script>
